[package]
name = "aoc"
version = "0.1.0"
authors = ["Luca Schinnerl"]
edition = "2021"
default-run = "aoc"

[lib]
proc-macro = true

[profile.dev]
overflow-checks = false

[dependencies]
rayon = "1.6"

# lib proc-macro dependencies
syn = { version = "1.0", features = ["full"] }
quote = "1.0"
itertools = "0.12.0"
regex = "1.10.2"
num-integer = "0.1.45"
